ProductImage byte[] 추가